# BenchAtomCalcCompose

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: bench-matrix.yml  ci.yml
include/benchcalc/: benchmark.h  dataset.h  executor.h  expression.h  kernels.h  llvm_jit.h  parser.h  plan.h  types.h
src/: benchmark.cpp  dataset.cpp  executor.cpp  llvm_jit.cpp  llvm_jit_stub.cpp  main.cpp  parser.cpp  plan.cpp
